fixed double scrollbar (by adding containers and html.div)

--- a/modules/app/src/assets/style.css
+++ b/modules/app/src/assets/style.css
@@ -106,11 +106,14 @@
     vertical-align: bottom;
 }
 
-
 .DateInput_input {
     height: 36px;
 }
 
 .modebar {
     display: none !important;
+}
+
+html {
+    overflow-y: hidden;
 }
